--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs",
   "version": "0.1.0",
-  "hompage": "imspdr.github.io/imspdrio",
+  "homepage": "imspdr.github.io/imspdrio",
   "engines": {
     "node": ">=20.0.0"
   },
